Add exclusive knowledge operations
